--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>condInspectionDemo</name>
   <url>http://maven.apache.org</url>
+<properties>
+<java.version>11</java.version>
+<maven.compiler.target>11</maven.compiler.target>
+</properties>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
